--- a/.github/workflows/nezha_agent_release.yml
+++ b/.github/workflows/nezha_agent_release.yml
@@ -1,4 +1,4 @@
-name: Update nezha agent release
+name: 更新 nezha agent 二进制文件
 
 on:
   schedule:
@@ -10,11 +10,12 @@ jobs:
     name: Download and Upload release
     runs-on: ubuntu-latest
     env:
-      SOURCE_REPOSITORY: nezhahq/agent # 参数 1：仓库名
-      DOWNLOAD_FILE: nezha-agent_freebsd_arm64.zip # 参数 2：下载和保存的文件名
-      TARGET_FOLDER: freebsd # 参数 3：创建的文件夹名
-      RENAMED_FILE: nezha_agent_arm64 # 参数 4：重命名后的文件名
-      TARGET_TAG: arm64 # 参数 5：标签名
+      SOURCE_REPO: nezhahq/agent # 变量 1：上游 用户名/仓库名
+      DOWNLOAD_FILE: nezha-agent_freebsd_arm64.zip # 变量 2：下载和保存的文件名
+      TARGET_FOLDER: freebsd # 变量 3：创建的 release 文件夹名
+      RENAMED_FILE: nezha_agent_arm64 # 变量 4：重命名后的文件名
+      TARGET_TAG: arm64 # 变量 5：release 标签名
+      UPLOAD_REPO: yutian81/serv00-ct8-ssh # 变量 6：上传到的 用户名/仓库名
 
     steps:
       - name: Checkout this repository
@@ -27,7 +28,7 @@ jobs:
 
       - name: Download release
         run: |
-          curl -sL https://github.com/${{ env.SOURCE_REPOSITORY }}/releases/latest/download/${{ env.DOWNLOAD_FILE }} -o ${{ env.DOWNLOAD_FILE }}
+          curl -sL https://github.com/${{ env.SOURCE_REPO }}/releases/latest/download/${{ env.DOWNLOAD_FILE }} -o ${{ env.DOWNLOAD_FILE }}
           mkdir -p ${{ env.TARGET_FOLDER }}
           unzip -o ${{ env.DOWNLOAD_FILE }} -d ${{ env.TARGET_FOLDER }}
 
@@ -38,8 +39,16 @@ jobs:
           # 重命名文件
           mv ${{ env.TARGET_FOLDER }}/$FILE_NAME ${{ env.TARGET_FOLDER }}/${{ env.RENAMED_FILE }}
 
-      - name: Create a new release
+      - name: Check if release exists
+        id: check_release
+        run: |
+          RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${{ env.UPLOAD_REPO }}/releases/tags/${{ env.TARGET_TAG }})
+          echo "::set-output name=release_exists::$(echo $RESPONSE | grep -c 'Not Found')"
+
+      - name: Create a new release if not exists
         id: create_release
+        if: steps.check_release.outputs.release_exists == '1'
         uses: actions/create-release@v1
         with:
           tag_name: ${{ env.TARGET_TAG }}
