--- a/.github/workflows/nezha_agent_release.yml
+++ b/.github/workflows/nezha_agent_release.yml
@@ -60,9 +60,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload to GitHub Release
+        if: steps.check_release.outputs.release_exists == '1' || steps.create_release.outputs.upload_url != '' # 确保上传步骤只有在 release 已创建时才执行
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./freebsd/${{ env.RENAMED_FILE }}
           asset_name: ${{ env.RENAMED_FILE }}
           asset_content_type: application/octet-stream
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
