--- a/.github/workflows/nezha_agent_release.yml
+++ b/.github/workflows/nezha_agent_release.yml
@@ -39,16 +39,21 @@ jobs:
           # 重命名文件
           mv ${{ env.TARGET_FOLDER }}/$FILE_NAME ${{ env.TARGET_FOLDER }}/${{ env.RENAMED_FILE }}
 
+      - name: Debug file path
+        run: |
+          echo "Checking the contents of the folder:"
+          ls -la ./freebsd
+
       - name: Check if release exists
         id: check_release
         run: |
           RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ env.UPLOAD_REPO }}/releases/tags/${{ env.TARGET_TAG }})
-          echo "::set-output name=release_exists::$(echo $RESPONSE | grep -c 'Not Found')"
+          echo "release_exists=$(echo $RESPONSE | grep -c 'Not Found')" >> $GITHUB_ENV
 
       - name: Create a new release if not exists
         id: create_release
-        if: steps.check_release.outputs.release_exists == '1'
+        if: ${{ env.release_exists == '1' }}
         uses: actions/create-release@v1
         with:
           tag_name: ${{ env.TARGET_TAG }}
@@ -59,8 +64,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Delete existing asset if exists
+        id: delete_existing_asset
+        if: ${{ env.release_exists == '0' }}
+        run: |
+          # 查找已经上传的文件并删除它
+          ASSET_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${{ env.UPLOAD_REPO }}/releases/tags/${{ env.TARGET_TAG }} | \
+            jq -r '.assets[] | select(.name == "${{ env.RENAMED_FILE }}") | .id')
+          if [ "$ASSET_ID" != "null" ]; then
+            curl -s -X DELETE -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/${{ env.UPLOAD_REPO }}/releases/assets/$ASSET_ID
+          fi
+
       - name: Upload to GitHub Release
-        if: steps.check_release.outputs.release_exists == '1' || steps.create_release.outputs.upload_url != '' # 确保上传步骤只有在 release 已创建时才执行
+        if: ${{ env.release_exists == '1' || steps.create_release.outputs.upload_url != '' }}
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
@@ -69,3 +87,4 @@ jobs:
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
