--- a/.github/workflows/nezha_agent_release.yml
+++ b/.github/workflows/nezha_agent_release.yml
@@ -10,12 +10,12 @@ jobs:
     name: Download and Upload release
     runs-on: ubuntu-latest
     env:
-      SOURCE_REPO: nezhahq/agent # 上游 用户名/仓库名
-      DOWNLOAD_FILE: nezha-agent_freebsd_arm64.zip # 下载和保存的文件名
-      TARGET_FOLDER: freebsd # 创建的 release 文件夹名
-      RENAMED_FILE: nezha_agent_arm64 # 重命名后的文件名
-      TARGET_TAG: arm64 # release 标签名
-      UPLOAD_REPO: yutian81/serv00-ct8-ssh # 上传到的 用户名/仓库名
+      SOURCE_REPO: nezhahq/agent # 变量 1：上游 用户名/仓库名
+      DOWNLOAD_FILE: nezha-agent_freebsd_arm64.zip # 变量 2：下载和保存的文件名
+      TARGET_FOLDER: freebsd # 变量 3：创建的 release 文件夹名
+      RENAMED_FILE: nezha_agent_arm64 # 变量 4：重命名后的文件名
+      TARGET_TAG: arm64 # 变量 5：release 标签名
+      UPLOAD_REPO: yutian81/serv00-ct8-ssh # 变量 6：上传到的 用户名/仓库名
 
     steps:
       - name: Checkout this repository
@@ -47,9 +47,12 @@ jobs:
       - name: Check if release exists
         id: check_release
         run: |
+          # 检查是否存在指定标签的 release
           RESPONSE=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ env.UPLOAD_REPO }}/releases/tags/${{ env.TARGET_TAG }})
+          echo "RESPONSE=$RESPONSE" # 输出完整响应内容
           echo "release_exists=$(echo $RESPONSE | grep -c 'Not Found')" >> $GITHUB_ENV
+          echo "release_exists=${{ env.release_exists }}" # 确保存在此环境变量
 
       - name: Create a new release if not exists
         id: create_release
@@ -68,7 +71,7 @@ jobs:
         id: delete_existing_asset
         if: ${{ env.release_exists == '0' }}
         run: |
-          # 查找已经上传的文件并删除它
+          # 查找并删除已上传的文件
           ASSET_ID=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ env.UPLOAD_REPO }}/releases/tags/${{ env.TARGET_TAG }} | \
             jq -r '.assets[] | select(.name == "${{ env.RENAMED_FILE }}") | .id')
@@ -87,4 +90,3 @@ jobs:
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
