--- a/.github/workflows/webfreecloud-alive.yml
+++ b/.github/workflows/webfreecloud-alive.yml
@@ -22,7 +22,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4
+        pip install playwright requests
+        playwright install chromium
+        playwright install-deps chromium
 
     - name: Run auth check
       env:
