--- a/.github/workflows/webfreecloud-alive.yml
+++ b/.github/workflows/webfreecloud-alive.yml
@@ -22,9 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install playwright requests
-        playwright install chromium
-        playwright install-deps chromium
+        pip install requests beautifulsoup4
 
     - name: Run auth check
       env:
