--- a/.github/workflows/netlib-keepalive.yml
+++ b/.github/workflows/netlib-keepalive.yml
@@ -1,4 +1,4 @@
-name: Keep Alive Login
+name: netlib alive
 
 on:
   schedule:
@@ -31,4 +31,4 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
-          python login.py
+          python netlib-alive/netlib-alive.py
