--- a/.github/workflows/netlib-keepalive.yml
+++ b/.github/workflows/netlib-keepalive.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Run Keep Alive Login
         env:
           SITE_ACCOUNTS: ${{ secrets.SITE_ACCOUNTS }}
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: |
           python netlib-alive/netlib-alive.py
